[package]
name = "animu_actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
anitomy = "0.1"
pkce = "0.1.1"
chrono = "0.4"
hyper-rustls = "^0.22"
hyper = "^0.14"
async-trait = "0.1.50"
google-drive3 = "2"
yup-oauth2 = "5.1.0"
dotenv = "0.15"
http = "0.2.4"
