[package]
name = "animu_actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {git =  "https://github.com/actix/actix-web", tag = "web-v4.0.0-beta.6"}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"]}
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["postgres"] } 
serde_json = "1"
anitomy = "0.1"
pkce = "0.1.1"
chrono = "0.4"
hyper-rustls = "^0.22"
hyper = "^0.14"
async-trait = "0.1.50"
google-drive3 = "2"
yup-oauth2 = "5.1.0"
dotenv = "0.15"
http = "0.2.4"
sha2 = "0.9.5"
libaes = "0.6"
base64 = "0.13.0"